<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/student_name_layout"
        android:hint="Place to type name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/student_id_layout"
        android:hint="Place to type id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:inputType="number"
            android:id="@+id/student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/student_grade_layout"
        android:hint="Place to type grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:maxLength="1"
            android:id="@+id/student_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:text="Is student passing?"
        android:id="@+id/student_is_passing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="Show this data on new Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/show_data_button"/>

    <Button
        android:text="Show data from parceleble on new Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/show_parcelable_data_button"/>

    <Button
        android:text="Show data from parceler on new Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/show_parceler_data_button"/>

    <Button
        android:text="Show data from serializable on new Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/show_serializable_data_button"/>

    <Button
        android:text="Show tabbed fragment Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/show_tabbed_fragment_activity_button"/>

    <Button
        android:text="Show saving test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/show_saving_test_button"/>

</LinearLayout>
</ScrollView>
