<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            tools:text="To provede"
            android:textSize="20dp"
            android:layout_margin="20dp"
            android:id="@+id/nameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="To provede"
            android:layout_margin="20dp"
            android:textSize="20dp"
            android:id="@+id/idView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="To provede"
            android:layout_margin="20dp"
            android:textSize="20dp"
            android:id="@+id/gradeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="To provede"
            android:layout_margin="20dp"
            android:textSize="20dp"
            android:id="@+id/isPassingView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>