package com.marcinmoskala.kotlinapp

import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.closeSoftKeyboard
import androidx.test.espresso.action.ViewActions.replaceText
import androidx.test.espresso.action.ViewActions.scrollTo
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.espresso.matcher.ViewMatchers.withText
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import androidx.test.runner.AndroidJUnit4
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class ClickableSampleTest {

    @Rule @JvmField var activityTestRule = ActivityTestRule(MainActivity::class.java, true)

    @Test
    @Throws(InterruptedException::class)
    fun defaultValuesTest() {
        onView(withId(R.id.studentGradeView)).perform(scrollTo(), replaceText("A"), closeSoftKeyboard())

        onView(withId(R.id.showDataButton)).perform(scrollTo(), click())

        onView(withId(R.id.gradeView)).check(matches(withText("Grade: A")))
        onView(withId(R.id.nameView)).check(matches(withText("Name: No name provided")))
        onView(withId(R.id.idView)).check(matches(withText("Id: -1")))
    }

    @Test
    @Throws(InterruptedException::class)
    fun parcelableTest() {
        onView(withId(R.id.showParcelableDataButton)).perform(scrollTo(), click())

        onView(withId(R.id.nameView)).check(matches(withText("Name: Marcin")))
        onView(withId(R.id.idView)).check(matches(withText("Id: 10")))
        onView(withId(R.id.gradeView)).check(matches(withText("Grade: A")))
    }

    @Test
    fun simpleDataPassingTest() {
        onView(withId(R.id.studentNameView)).perform(scrollTo(), replaceText("Marcin"), closeSoftKeyboard())
        onView(withId(R.id.studentIdView)).perform(scrollTo(), replaceText("123"), closeSoftKeyboard())
        onView(withId(R.id.studentGradeView)).perform(scrollTo(), replaceText("A"), closeSoftKeyboard())
        onView(withId(R.id.studentIsPassingView)).perform(scrollTo(), click())

        onView(withId(R.id.showDataButton)).perform(scrollTo(), click())

        onView(withId(R.id.nameView)).check(matches(withText("Name: Marcin")))
        onView(withId(R.id.idView)).check(matches(withText("Id: 123")))
        onView(withId(R.id.gradeView)).check(matches(withText("Grade: A")))
        onView(withId(R.id.isPassingView)).check(matches(withText("Passing status: true")))
    }
}
